@@ -25,8 +25,8 @@ dependencies {
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.httpcomponents:httpclient:4.5.12'
-    compile 'org.springframework:spring-beans:5.2.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.5.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.5.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
