@@ -1,3 +1,6 @@
+Apr 23, 2020
+  term stats loader: added calculation of term stats for cell lines
+
 Apr 15, 2020
   parser: for GO, fixed generation of Not4Curation synonyms
 
